Fixed annoying misalignment on resize bug.

--- a/media/css/home.css
+++ b/media/css/home.css
@@ -123,11 +123,14 @@ a:hover {
     text-shadow: rgba(0, 0, 0, .4);
 }
 
-.atlas-btn {
+.label {
     font-size: 11px;
     font-weight: 700;
-    height: 36px;
     text-transform: uppercase;
+}
+
+.atlas-btn {
+    height: 36px;
 }
 
 /*  HEADER
@@ -548,6 +551,7 @@ html,
 // ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
 
 .example-wrap {
+    text-align: center;
     margin: 0 auto 40px;
 }
 
@@ -570,6 +574,12 @@ html,
 
 .example-image {
     margin: 0 auto 20px;
+}
+
+.example-label {
+    display: inline-block;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #DDDDDD;
 }
 
 .example-caption {
@@ -608,7 +618,7 @@ html,
 }
 
 
-/*  Video
+/*  VIDEO
 // ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
 
 .hausman-video {
@@ -725,6 +735,10 @@ html,
     right: 0;
 }
 
+.megafooter-content {
+    position: relative;
+}
+
 
 /*  SITE NAV FULL
 // ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
@@ -774,6 +788,7 @@ html,
         padding-right: 1em;
         border-right: 1px solid #DDDDDD;
         border-bottom: 0;
+        float: left;
     }
     .site-nav-full-list-toplevel:first-child {
         padding-right: 1em;
@@ -801,8 +816,9 @@ html,
 
 @media screen and (min-width: 48em) {
     .megafooter-listserv {
+        position: absolute;
+        right: 0;
         text-align: left;
-        float: right;
         padding-left: 1.5em;
     }
 }
